force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/Auditoria_Estrutural_Semanal__c.object-meta.xml
<CustomObject>
    <description>O objeto &quot;Auditoria Estrutural Semanal&quot; registra auditorias das unidades do grupo Hospcom. Ele contém perguntas associadas a descrições correspondentes, como pergunta1__c → d1__c. A geração de PDF ocorre por meio de uma página Visualforce (VF), mas seu código é fixo, exigindo alterações manuais caso haja mudanças nas perguntas. Um campo fórmula contabiliza automaticamente as Não Conformidades, enquanto um Apex Trigger percorre 23 perguntas para criar registros do objeto &quot;Não Conformidade&quot;, preenchendo descrição, data de criação e proprietário. Após isso, um Fluxo de Processos atualiza o campo &quot;Empresa Auditada&quot;. Esse looping tambem tem o numero fixo de 23 interações.</description>
    <label>Auditoria Estrutural Semanal</label>
    <nameField>
        <displayFormat>AES-{0000}</displayFormat>
        <label>Auditoria Estrutural Semanal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auditorias Estruturais Semanais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>