force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/Auditor_a__c.field-meta.xml
<CustomField>
    <fullName>Auditor_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor(a)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Auditorias_Estruturais_Semanais</relationshipName>
    <type>Lookup</type>
</CustomField>