force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/d17__c.field-meta.xml
<CustomField>
    <fullName>d17__c</fullName>
    <label>Descrição:</label>
    <length>200</length>
    <type>Text</type>
</CustomField>