force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/Data_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Data_Auditoria__c</fullName>
    <label>Data da auditoria</label>
    <type>Date</type>
</CustomField>