force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/pergunta13__c.field-meta.xml
<CustomField>
    <fullName>pergunta13__c</fullName>
    <inlineHelpText>Todos os rótulos estão acoplados na caixa de equipamento?Os rótulos encontram-se sem 
avarias e com todas as informações legíveis?</inlineHelpText>
    <label>Todos os rótulos estão acoplados na...?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditoria_Estrutural_Semanal</valueSetName>
    </valueSet>
</CustomField>