force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/pergunta14__c.field-meta.xml
<CustomField>
    <fullName>pergunta14__c</fullName>
    <inlineHelpText>A liberação dos produtos está sendo feita de acordo com a ordem cronológica do vencimento?</inlineHelpText>
    <label>A liberação dos produtos está sendo...?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditoria_Estrutural_Semanal</valueSetName>
    </valueSet>
</CustomField>