force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/pergunta15__c.field-meta.xml
<CustomField>
    <fullName>pergunta15__c</fullName>
    <inlineHelpText>A separação dos produtos está sendo feita de maneira padronizada utilizando a área correta?</inlineHelpText>
    <label>A separação dos produtos está sendo...?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditoria_Estrutural_Semanal</valueSetName>
    </valueSet>
</CustomField>