force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/Produto3__c.field-meta.xml
<CustomField>
    <fullName>Produto3__c</fullName>
    <label>Produto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>