force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/RMS4__c.field-meta.xml
<CustomField>
    <fullName>RMS4__c</fullName>
    <label>RMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>