force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.GrupoHospcom__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Auditorias Estruturais Semanais</relationshipLabel>
    <relationshipName>Auditorias_Estruturais_Semanais</relationshipName>
    <type>Lookup</type>
</CustomField>