force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unidade__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Data_Auditoria__c</columns>
    <columns>totalNC__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>