force-app/main/default/objects/Auditoria_Estrutural_Semanal__c/listViews/Gestcom.listView-meta.xml
<ListView>
    <fullName>Gestcom</fullName>
    <columns>NAME</columns>
    <columns>Unidade__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Data_Auditoria__c</columns>
    <columns>totalNC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unidade__c</field>
        <operation>contains</operation>
        <value>GESTCOM</value>
    </filters>
    <label>GESTCOM</label>
</ListView>